[metadata]
name = rego
version = 1.4.1
description = Automatic Time Series Forecasting and Missing Value Imputation
long_description = file: README.md
long_description_content_type = text/markdown
author = Davide Altomare, David Loris
author_email = info@channelattribution.io
url = https://channelattribution.io/docs/rego
download_urls = https://pypi.org/project/rego
project_urls = 
	Documentation = https://channelattribution.io/docs/rego
	Code = https://github.com/DavideAltomare/rego
	Issue tracker = https://github.com/DavideAltomare/rego/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C++
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:
setup_requires =
    setuptools
    wheel
    cython
	
[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
cypack = data/*

[egg_info]
tag_build = 
tag_date = 0

